force-app/main/default/objects/Inspection_Data__c/Inspection_Data__c.object-meta.xml
<CustomObject>
    <description>This object stores all of the questions, and answers to inspections.  Allows a One to Many relationship.</description>
    <label>Inspection Data</label>
    <nameField>
        <displayFormat>ID-{YYYY}{MM}{DD}-{000000}</displayFormat>
        <label>Inspection Data ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Inspection Data</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>