force-app/main/default/objects/Inspection_Data__c/fields/Inspection__c.field-meta.xml
<CustomField>
    <fullName>Inspection__c</fullName>
    <description>This establishes a Master-Detail relationship with the Inspection that this data is related to. - Not Reparentable</description>
    <inlineHelpText>This establishes a Master-Detail relationship with the Inspection that this data is related to.  -Not Reparentable</inlineHelpText>
    <label>Inspection</label>
    <referenceTo>DIR_Inspection__c</referenceTo>
    <relationshipLabel>Inspection Data</relationshipLabel>
    <relationshipName>Inspection_Data</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>