force-app/main/default/objects/Inspection_Data__c/fields/Question_Text__c.field-meta.xml
<CustomField>
    <fullName>Question_Text__c</fullName>
    <description>Text of the question</description>
    <formula>Inspection_Question__r.Inspection_Question__c</formula>
    <inlineHelpText>Question that was answered</inlineHelpText>
    <label>Question Text</label>
    <type>Text</type>
</CustomField>