force-app/main/default/objects/Inspection_Data__c/fields/Report_Section__c.field-meta.xml
<CustomField>
    <fullName>Report_Section__c</fullName>
    <description>Pulls the section that the question and answer should be displayed in on the report down from the inspection question for ease of producing the conga document</description>
    <formula>Text(Inspection_Question__r.Inspection_Section__c)</formula>
    <label>Report Section</label>
    <type>Text</type>
</CustomField>