force-app/main/default/objects/Inspection_Data__c/fields/Response__c.field-meta.xml
<CustomField>
    <fullName>Response__c</fullName>
    <description>Response to inspection question. Populated by VF page that presents the inspections to the inspector</description>
    <inlineHelpText>Response given by inspector when completing inspection</inlineHelpText>
    <label>Response</label>
    <length>255</length>
    <type>Text</type>
</CustomField>